<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/exectedReturnAmount"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/labelExpectedReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/expectedReturnAmount"
        app:layout_constraintEnd_toStartOf="@id/inputExpectedReturn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/inputExpectedReturn"/>

    <EditText
        android:id="@+id/inputExpectedReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="28dp"
        android:labelFor="@id/inputExpectedReturn"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/labelExpectedReturn"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/labelSingleInvestment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/singleInvestmentAmount"
        app:layout_constraintEnd_toStartOf="@id/inputSingleInvestment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelExpectedReturn"
        app:layout_constraintBaseline_toBaselineOf="@id/inputSingleInvestment"/>

    <EditText
        android:id="@+id/inputSingleInvestment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="28dp"
        android:labelFor="@id/inputSingleInvestment"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/labelSingleInvestment"
        app:layout_constraintTop_toBottomOf="@id/inputExpectedReturn" />


    <TextView
        android:id="@+id/labelPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/period"
        app:layout_constraintEnd_toStartOf="@id/inputSingleInvestment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelSingleInvestment"
        app:layout_constraintBaseline_toBaselineOf="@id/inputPeriod"/>

    <EditText
        android:id="@+id/inputPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="28dp"
        android:labelFor="@id/inputPeriod"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/labelPeriod"
        app:layout_constraintTop_toBottomOf="@id/inputSingleInvestment" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include layout="@layout/common_calculate_button" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>